# six-birds-randomness

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/final/: CHECKSUMS.sha256  core_registry.json
assets/: zenodo_related_works.csv
configs/: markov_bench_default.json  markov_bench_smoke.json
docs/lab-notes/: 2026-03-05_markov_bench.md  2026-03-06_experiment_closeout.md
experiments/: smoke.py
experiments/budget_curves/: run_budget_curves.py
experiments/hashing_toy/: run_hashing_toy.py
experiments/markov_bench/: analyze.py  run_sweep.py
experiments/rep_packaging/: make_dataset.py  run_clustering_packaging.py  train_discrete_encoder.py
lean/: README.md  RandomnessLedgerLean.lean  Smoke.lean  lake-manifest.json  lakefile.toml
lean/RandomnessLedgerLean/: KLBridge.lean
paper/: .gitignore  Makefile  README.md  main.tex  preamble.tex  references.bib
paper/data/: README.md  budget_metrics.csv  hashing_metrics.csv  markov_metrics.csv  rep_clustering_metrics.csv
paper/scripts/: make_publication_figures.py
paper/sections/: 00_abstract.tex  01_intro.tex  02_setup.tex  03_closure_deficit.tex  04_diagnostics.tex  05_results_markov.tex  06_results_budget_hashing.tex  07_discussion.tex  08_conclusion.tex  appendix_lean.tex  appendix_rep_clustering.tex
scripts/: package_repo_snapshot.sh  reproduce_all.sh  smoke.sh
src/randomness_ledger/: estimators.py  (+5 more)
tests/: test_estimators.py  test_generators.py  test_markov.py  test_metrics.py  test_obs_models.py  test_packaging.py  test_robustness.py  test_smoke.py
(+6 files in other folders)
