[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randomness-ledger"
version = "0.1.0"
description = "Randomness experiments and metrics ledger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
viz = [
  "matplotlib",
]
nn = [
  "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
